Bug 386123 - Properties view does not include label properties
Summary: Properties view does not include label properties
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Albums-ItemsProperty (other bugs)
Version First Reported In: 5.8.0
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-23 19:55 UTC by Jan Wolter
Modified: 2025-12-20 12:44 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.8.0
Sentry Crash Report:


Attachments
properties view (184.11 KB, image/png)
2017-10-23 19:55 UTC, Jan Wolter
Details
Video (1.55 MB, video/ogg)
2017-10-23 20:42 UTC, Jan Wolter
Details
Fixes recursion from 68ca663ad26af6395a0ff59a011d7b4ad8e6fa78 (801 bytes, patch)
2017-10-24 09:46 UTC, Simon
Details
Fixes recursion from 68ca663ad26af6395a0ff59a011d7b4ad8e6fa78 (884 bytes, patch)
2017-10-24 11:44 UTC, Simon
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Wolter 2017-10-23 19:55:26 UTC
Created attachment 108529 [details]
properties view

Since digikam version 5.6 the properties view does not include label properties as pick or color label. I've tested it with different appimage versions. dk 5.5 includes the label properties. From dk 5.6 to 5.8 the label prob. are not included.

See a comparison in the attached picture.
Comment 1 caulier.gilles 2017-10-23 20:23:42 UTC
Select relevant item, Go to Captions tab from right side bar and force Database to resync properties with metadata.

This feature is always present in digiKam. Nothing has changed. I suspect something wrong with your database, or something like this.

Gilles Caulier
Comment 2 Jan Wolter 2017-10-23 20:42:22 UTC
Created attachment 108530 [details]
Video

In the captions tab all label properties are correct but in the properties tab they still not appear. I made a small video with digikam version 5.7. Please compare the behavior there.
Comment 3 Maik Qualmann 2017-10-23 21:23:41 UTC
The commit to this bug https://bugs.kde.org/show_bug.cgi?id=376251 is the cause and changes in imagepropertiessidebardb.cpp.

I'll look at it tomorrow.

Maik
Comment 4 Simon 2017-10-23 21:47:43 UTC
I cannot reproduce this, infos are shown just fine here.
The commit Maik linked does not change any functionality in the properties sidebar, it only refactors code.
Comment 5 Maik Qualmann 2017-10-24 06:03:27 UTC
Now is allways used ImagePropertiesSideBar::setImagePropertiesInformation(m_currentURL).
This use not the DB and not show pick or color label infos.

The function for digiKam with DB is
ImagePropertiesSideBarDB::setImagePropertiesInformation(const QUrl& url).
The commit change imagepropertiessidebardb.cpp

Maik
Comment 6 Simon 2017-10-24 07:11:12 UTC
You are absolutely right, sorry, I missed that distinction and due to using metadata in files I didn't see the problem. Let me fix that please, as it is my own mess (unless you already did). And thanks for insisting :)
Comment 7 Simon 2017-10-24 09:46:51 UTC
Created attachment 108535 [details]
Fixes recursion from 68ca663ad26af6395a0ff59a011d7b4ad8e6fa78
Comment 8 Maik Qualmann 2017-10-24 10:41:43 UTC
It works only when I select 2 images, not with one selected image.

Maik
Comment 9 Simon 2017-10-24 11:44:26 UTC
Created attachment 108539 [details]
Fixes recursion from 68ca663ad26af6395a0ff59a011d7b4ad8e6fa78
Comment 10 Maik Qualmann 2017-10-24 16:15:59 UTC
Yes, this patch works fine, thank you.

Maik
Comment 11 Simon 2017-10-24 16:22:18 UTC
Git commit 1f61fabd3fb0531d371b514b1cf960483eb35c7d by Simon Frei.
Committed on 24/10/2017 at 16:21.
Pushed by sfrei into branch 'master'.

fix recursion from 68ca663ad26af6395a0ff59a011d7b4ad8e6fa78
FIXED-IN: 5.8.0

M  +2    -1    NEWS
M  +8    -1    libs/imageproperties/imagepropertiessidebardb.cpp

https://commits.kde.org/digikam/1f61fabd3fb0531d371b514b1cf960483eb35c7d