fix recursion from 68ca663ad26af6395a0ff59a011d7b4ad8e6fa78

BUG: 386123
FIXED-IN: 5.8.0